update the code

--- a/.github/workflows/lab2-workflow.yml
+++ b/.github/workflows/lab2-workflow.yml
@@ -17,7 +17,9 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Exploring Workflow Dispatch Trigger"
+      - run: |
+            echo "Exploring Workflow Dispatch Trigger"
+            echo "${{ inputs.run_job }}"
   job2:
     runs-on: ubuntu-latest
     steps:
