--- a/.github/workflows/lab2-workflow.yml
+++ b/.github/workflows/lab2-workflow.yml
@@ -17,12 +17,10 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     steps:
-      - run: |
-            echo "Exploring Workflow Dispatch Trigger"
-            echo "${{ inputs.run_job }}"
+      - run: echo "Exploring Workflow Dispatch Trigger"
   job2:
     runs-on: ubuntu-latest
     steps:
      - name: Printing Custom Message
-       run: echo "${{ inputs.custom_message }}"
+       run: echo "${{ inputs.custom_message }}" && echo "${{ inputs.run_job }}"
 
